--- a/css/global.css
+++ b/css/global.css
@@ -9,18 +9,23 @@ body {
     font-weight: lighter;
 }
 
-header {
-    width: 100%;
-    height: 15vh;
-    background: url(../images/snow.jpeg) no-repeat 50% 50%;
-    background-size: cover;
-}
+/* header {
+    /* width: 100%;
+    height: 15vh; */
+    /* background: url(../images/snow.jpeg) no-repeat 50% 50%; */
+    
+    /* background-size: cover; */
+/* } */ */
 
 .wrapper{
     position: relative;
     z-index: 100;
 }
 
+ul li{
+    list-style-type: none;
+    
+}
 
 .content {
     width: 94%;
@@ -35,6 +40,13 @@ header {
     
 }
 
+.contentList{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .logo {
     line-height: 60px;
     position: fixed;
@@ -46,70 +58,60 @@ header {
     text-shadow: 2px 2px black;
     letter-spacing: 2px;
 }
+
+
 .parallax{
-    background-image: url("../images/snowglobe.jpg");
+    background-image: url("../images/snowglobe2.jpeg");
     height: 100vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-nav {
-    position: fixed;
-    width: 100%;
-    line-height: 60px;
+.aboutUsParallax{
+    /* background-color: #013A63; */
+    background-image: url("../images/gradient2.jpg");
+    height: 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: scroll;
 }
 
-nav ul {
-    line-height: 60px;
-    list-style: none;
-    background: rgba(0, 0, 0, 0);
-    overflow: hidden;
-    color: #fff;
-    padding: 0;
-    text-align: right;
-    margin: 0;
-    padding-right: 40px;
-    transition: 1s;
+.text1{
+    color: #013A63;
+    text-shadow: 1px 1px rgb(211, 216, 222);
 }
 
-nav.black ul {
-    background: rgb(220, 216, 188);
+.col-container {
+    display: table; /* Make the container element behave like a table */
+    width: 100%; /* Set full-width to expand the whole page */
+    height: 100%;
+    /* background-color: green; */
+    margin-right: 0;
+    overflow: scroll;
 }
-
-nav ul li {
+.searchBarContainer {
     display: inline-block;
-    padding: 16px 40px;;
+    width: 100%; /* Set full-width to expand the whole page */
+    height: 100%;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: sans-serif;
-    text-shadow: 2px 2px black;
+.map.mapCircle {
+    width: 476px;
+    height: 476px;
+}
+.mapCircle>div>div:first-child {
+    -moz-border-radius: 238px;
+    -webkit-border-radius: 238px;
+    border-radius: 238px;
 }
 
-a:hover{
-    background-color: rgb(184, 183, 170);
-    color: black;
-    text-decoration: none;
-    
-}
 
-.menu-icon {
-    line-height: 60px;
-    width: 100%;
-    background: #000;
-    text-align: right;
-    box-sizing: border-box;
-    padding: 15px 24px;
-    cursor: pointer;
-    color: #fff;
-    display: none;
-}
 
 @media(max-width: 786px) {
 
@@ -121,7 +123,7 @@ a:hover{
 
     nav ul {
         max-height: 0px;
-        background: #000;
+        
     }
 
     nav.black ul {
