--- a/css/map.css
+++ b/css/map.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     }
     .marker {
-    background-image: url('/images/snowflake.png');
+    background-image: url('../images/snowflake.png');
     background-size: cover;
     width: 50px;
     height: 50px;
@@ -18,7 +18,7 @@ body {
     cursor: pointer;
     }
     .userMarker {
-    background-image: url('/images/userpos.png');
+    background-image: url('../images/userpos.png');
     background-size: cover;
     width: 50px;
     height: 50px;
