--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,9 +1,11 @@
 nav {
     position: top;
-    display: flex;
     width: 100%;
     line-height: 60px;
     z-index: 1000;
+    display: inline;
+    justify-content: space-around;
+    align-items: center;
 }
 
 nav ul {
@@ -25,9 +27,8 @@ nav ul li {
     padding: 8px 2px;;
 }
 
-nav ul li a {
+nav ul li {
     text-decoration: none;
-    color: #fff;
     font-size: 20px;
     font-weight: bold;
     text-shadow: 2px 2px black;
@@ -39,6 +40,10 @@ nav ul li a {
 
 nav a:hover{
     text-decoration: none;
+    color: white;
+}
+
+nav a{
     color: white;
 }
 
@@ -57,4 +62,10 @@ nav a:hover{
     position: fixed;
     top: 0;
     width: 100%;
+}
+
+
+.headerAlign{
+    display: flex;
+    justify-content: space-between;
 }
