--- a/css/map.css
+++ b/css/map.css
@@ -60,10 +60,10 @@ body {
         vertical-align: middle;
     }
     .skiMarker {
-        background-image: url('../images/snowflake.png');
+        background-image: url('../images/ski.png');
         background-size: cover;
         width: 50px;
         height: 50px;
-        border-radius: 50%;
+        border-radius: ;
         cursor: pointer;
         }
