--- a/css/map.css
+++ b/css/map.css
@@ -60,7 +60,7 @@ body {
         vertical-align: middle;
     }
     .skiMarker {
-        background-image: url('../images/snowflake.png');
+        background-image: url('../images/penguin.png');
         background-size: cover;
         width: 50px;
         height: 50px;
