--- a/css/map.css
+++ b/css/map.css
@@ -64,6 +64,6 @@ body {
         background-size: cover;
         width: 50px;
         height: 50px;
-        border-radius: ;
+        border-radius: 50%;
         cursor: pointer;
         }
