--- a/css/global.css
+++ b/css/global.css
@@ -12,11 +12,13 @@ body {
     font-weight: lighter;
 }
 
-ul li{
+ul li {
     text-decoration: none;
     list-style: none;
-    display: inline;
+    display: block;
 }
+
+
 
 .graphContainer{
     background-image: url("../images/gradient.jpeg");
@@ -51,10 +53,11 @@ ul li{
     font-size: 20px;
     line-height: 30px;
     display: flex;
-    text-align: justify;
+    text-align: center;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     position: relative;
+    flex-wrap: wrap;
     
 }
 
@@ -98,21 +101,24 @@ ul li{
 }
 
 .secondBackground{
-    background-image: url("../images/gradient2.jpg");
-    height: 100%;
+    background-color: transparent;
+    height: 30%;
     width: 100%;
     background-attachment:local;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
+    overflow: visible;
     z-index: 100;
     box-shadow: 0 30px 40px rgba(0,0,0,.1);
 }
 .results{
-    height: 10px;
+    height: 100px;
     width: 100%;
     background-color: #6FCAEF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -175,7 +181,7 @@ ul li{
     font-family: Frostbitten Wanker;
     color: antiquewhite;
     font-style: normal;
-    text-shadow: 2px 2px rgb(16, 52, 87);
+    text-shadow: 2px 2px 2px rgb(16, 52, 87);
 }
 .snowText2{
     font-family: Frostbitten Wanker;
@@ -232,6 +238,24 @@ ul li{
 
 .fa-li { /* font awesome icons */
     margin: 10px 0;
+}
+
+/* .snowUL.ul {
+    list-style-image: url('../images/flake.jfif');
+} */
+.snowULIcon{
+    list-style-image: url('../images/flake.jfif');
+    display: block;
+    text-align: center;
+}
+.slopeULIcon{
+    list-style-image: url('../images/—Pngtree—cute\ penguin\ ski\ illustration_5472693.png');
+    display: block;
+    text-align: center;
+}
+
+ul li:hover{
+    cursor:grab;
 }
 
 
