--- a/css/map.css
+++ b/css/map.css
@@ -32,7 +32,8 @@ body {
 
     .mapboxgl-popup-content {
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #224287;
     }
 
     .map.mapCircle {
