--- a/css/map.css
+++ b/css/map.css
@@ -32,7 +32,8 @@ body {
 
     .mapboxgl-popup-content {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Frostbitten Wanker";
+    font-weight: lighter;
     color: #224287;
     }
 
